# codex-api

./: .dockerignore  .env.exmple  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test.py
codexapi/codexapi/: __init__.py
codexapi/codexapi/codexapi/: __init__.py  codexapi.py
codexapi/codexapi/codexapi/adaptors/: __init__.py
codexapi/codexapi/codexapi/adaptors/core/: __init__.py
codexapi/codexapi/codexapi/adaptors/core/core/: i_responses_adaptor.py
codexapi/codexapi/codexapi/adaptors/core/http/: i_responses_adaptor_http.py
codexapi/codexapi/codexapi/adaptors/core/ws/: i_responses_adaptor_ws.py
codexapi/codexapi/codexapi/adaptors/wrappers/http/openai/: __init__.py  openai_chat_completion_adaptor_http.py  openai_text_completion_adaptor_http.py
codexapi/codexapi/codexapi/adaptors/wrappers/ws/openai/: openai_chat_completion_adaptor_ws.py  openai_responses_adaptor_ws.py
codexapi/codexapi/codexapi/constants/: hard_coded.py
codexapi/codexapi/server/: __init__.py
codexapi/codexapi/server/cli/: _utils.py  cli.py  cli_login.py  cli_serve.py
codexapi/codexapi/server/server/: __init__.py  server.py
codexapi/codexapi/server/server/auth/: oauth.py
codexapi/codexapi/server/server/models/: request.py
codexapi/codexapi/server/server/routers/: __init__.py
codexapi/codexapi/server/server/routers/openai/: _utils.py  router_openai.py
codexapi/codexapi/server/server/utils/: __init__.py  parse_inputs.py
codexapi/codexapi/server/server/vars/: computed.py
