[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "codexapi"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "requests==2.32.5",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.12.5",
    "websocket-client>=1.8.0",
    "openai>=2.26.0",
]

[project.scripts]
codexapi = "codexapi.codexapi:main"

[tool.setuptools.packages.find]
include = ["codexapi*"]
